k8s/mario-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario-deployment

spec:
  selector:
    matchLabels:
      app: mario
    
  replicas: 1

  template:
    metadata:
      labels:
        app: mario

    spec:
      containers:
      - name: pacman
        image: pengbai/docker-supermario
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 150m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: mario-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      
  selector:
    app: mario
