k8s/pacman-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment

spec:
  selector:
    matchLabels:
      app: pacman
    
  replicas: 1

  template:
    metadata:
      labels:
        app: pacman

    spec:
      containers:
      - name: pacman
        image: golucky5/pacman
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 150m
            memory: 32Mi
          limits:
            cpu: 500m
            memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: pacman-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      
  selector:
    app: pacman
