k8s/ingress-game.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: /mario
        backend:
          service:
            name: mario-service
            port:
              number: 80

      - pathType: Prefix
        path: "/pacman"
        backend:
          service:
            name: pacman-service
            port:
              number: 80
